# Edufusion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
edufusion/: __init__.py  merges.py  scheduler.py  text_encoder.py  unet.py  vae.py
src/edufusion/: __init__.py  cli.py  model.py  tokenizer.py  unet.py  utils.py
